# toka-user-management

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  turbo.json
docker/: .env.example  docker-compose.yml
docs/: exercise-4-incident-diagnosis.md  runbook-local.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
services/ai-agent-service/: Dockerfile  pyproject.toml
services/ai-agent-service/src/: config.py  main.py
services/ai-agent-service/src/agents/: admin_assistant.py  auth_context.py  backend_agent.py  database_agent.py  frontend_agent.py  orchestrator.py  rag_agent.py  report_agent.py  supervisor.py  trace_state.py
services/ai-agent-service/src/agents/tools/: audit_search.py  user_lookup.py  vector_search.py
services/ai-agent-service/src/api/middleware/: jwt_validation.py
services/ai-agent-service/src/api/routes/: chat.py  documents.py
services/ai-agent-service/src/evaluation/: metrics.py
services/ai-agent-service/src/infrastructure/llm/: provider.py
services/ai-agent-service/src/infrastructure/observability/: __init__.py  llm_observability.py
services/ai-agent-service/src/infrastructure/vector_store/: qdrant_adapter.py
services/ai-agent-service/src/prompts/: few_shot_examples.py  system_prompts.py
services/ai-agent-service/src/rag/: chunker.py  embedder.py  pipeline.py
services/ai-agent-service/tests/: test_agents_orchestrator.py  test_api_health.py  test_jwt_middleware.py  test_llm_provider.py  test_rag_chunker.py  test_rag_pipeline.py  test_supervisor.py
(+124 files in other folders)
