[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toka-ai-agent-service"
version = "1.0.0"
description = "AI Agent Service with LangGraph orchestrator and RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.0,<0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langgraph>=0.1.0",
    "qdrant-client>=1.9.0",
    "motor>=3.4.0",
    "aio-pika>=9.4.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/prompts/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
